@@ -17,12 +17,10 @@
 
 package com.lightstreamer.kafka_connector.adapters.mapping.selectors;
 
+import com.lightstreamer.kafka_connector.adapters.config.ConfigException;
 import com.lightstreamer.kafka_connector.adapters.config.ConnectorConfig;
 import java.io.File;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import org.apache.kafka.common.errors.SerializationException;
 import org.apache.kafka.common.serialization.Deserializer;
 
 public abstract class AbstractLocalSchemaDeserializer<T> implements Deserializer<T> {
@@ -32,15 +30,12 @@ public abstract class AbstractLocalSchemaDeserializer<T> implements Deserializer
     protected AbstractLocalSchemaDeserializer(ConnectorConfig config, boolean isKey) {
         String schemaFileKey =
                 isKey ? ConnectorConfig.KEY_SCHEMA_FILE : ConnectorConfig.VALUE_SCHEMA_FILE;
-        String fileSchema = config.getText(schemaFileKey);
-        if (fileSchema == null) {
-            throw new SerializationException(schemaFileKey + " setting is mandatory");
+        String schemaFileName = config.getFile(schemaFileKey);
+        if (schemaFileName == null) {
+            // Neve happens
+            throw new ConfigException(schemaFileKey + " setting is mandatory");
         }
-        Path path =
-                Paths.get((String) config.getDirectory(ConnectorConfig.ADAPTER_DIR), fileSchema);
-        if (!Files.isRegularFile(path)) {
-            throw new SerializationException("File [%s] not found".formatted(path));
-        }
+        Path path = Path.of(schemaFileName);
         schemaFile = path.toFile();
     }
 }
